# pyhdl-eval

./: .gitignore  LICENSE  Makefile.in  README.md  configure  configure.ac  conftest.py  pytest.ini
dataset/: Prob01p01_comb_const_zero_prompt.txt  Prob01p01_comb_const_zero_test.py  Prob01p01_comb_const_zero_test.v  Prob01p02_comb_const_one_prompt.txt  Prob01p02_comb_const_one_test.py  Prob01p02_comb_const_one_test.v  Prob01p03_comb_const_lohi_prompt.txt  Prob01p03_comb_const_lohi_test.py  Prob01p03_comb_const_lohi_test.v  Prob01p04_comb_const_32b_value_prompt.txt  Prob01p04_comb_const_32b_value_test.py  Prob01p04_comb_const_32b_value_test.v  Prob01p05_comb_const_param_test.py  Prob01p05_comb_const_param_test.v  Prob023_vector100r_prompt.txt  Prob02p01_comb_wires_8b_passthru_prompt.txt  Prob02p01_comb_wires_8b_passthru_test.py  Prob02p01_comb_wires_8b_passthru_test.v  Prob02p02_comb_wires_16b_split_prompt.txt  Prob02p02_comb_wires_16b_split_test.py  Prob02p02_comb_wires_16b_split_test.v  Prob02p03_comb_wires_8b_bit_rev_prompt.txt  Prob02p03_comb_wires_8b_bit_rev_test.py  Prob02p03_comb_wires_8b_bit_rev_test.v  Prob02p04_comb_wires_100b_bit_rev_prompt.txt  Prob02p04_comb_wires_100b_bit_rev_test.py  Prob02p04_comb_wires_100b_bit_rev_test.v  Prob02p05_comb_wires_64b_byte_rev_prompt.txt  Prob02p05_comb_wires_64b_byte_rev_test.py  Prob02p05_comb_wires_64b_byte_rev_test.v  Prob02p06_comb_wires_4x2b_passthru_prompt.txt  Prob02p06_comb_wires_4x2b_passthru_test.py  Prob02p06_comb_wires_4x2b_passthru_test.v  Prob02p07_comb_wires_4x2b_array_prompt.txt  Prob02p07_comb_wires_4x2b_array_test.py  Prob02p07_comb_wires_4x2b_array_test.v  Prob02p07_comb_wires_5x3b_to_4x4b_test.py  Prob02p07_comb_wires_5x3b_to_4x4b_test.v  Prob02p08_comb_wires_5x3b_to_4x4b_prompt.txt  Prob02p08_comb_wires_5x3b_to_4x4b_test.py  (+583 more)
dataset-orig/: Prob035_count1to10_prompt.txt  Prob038_count15_prompt.txt  Prob040_count10_prompt.txt  Prob041_dff8r_prompt.txt  Prob060_m2014_q4k_prompt.txt  Prob066_edgecapture_prompt.txt  Prob068_countbcd_prompt.txt  Prob073_dff16e_prompt.txt  Prob082_lfsr32_prompt.txt  Prob086_lfsr5_prompt.txt  Prob095_review2015_fsmshift_prompt.txt  Prob107_fsm1s_prompt.txt  Prob120_fsm3s_prompt.txt  Prob121_2014_q3bfsm_prompt.txt  Prob137_fsm_serial_prompt.txt  Prob139_2013_q2bfsm_prompt.txt  Prob141_count_clock_prompt.txt  Prob149_ece241_2013_q4_prompt.txt  Prob151_review2015_fsm_prompt.txt  Prob156_review2015_fancytimer_prompt.txt
examples/: amaranth-ex1.txt  amaranth-ex2.txt  amaranth-ex3.txt  amaranth-ex4.txt  migen-ex1.txt  migen-ex2.txt  migen-ex3.txt  migen-ex4.txt  myhdl-ex1.txt  myhdl-ex2.txt  myhdl-ex3.txt  myhdl-ex4.txt  pymtl-ex1.txt  pymtl-ex2.txt  pymtl-ex3.txt  pymtl-ex4.txt  pyrtl-ex1.txt  pyrtl-ex2.txt  pyrtl-ex3.txt  pyrtl-ex4.txt  verilog-ex1.txt  verilog-ex2.txt  verilog-ex3.txt  verilog-ex4.txt
pyhdl_eval/: amaranth.py  bits.py  cfg.py  core.py  migen.py  myhdl.py  pymtl.py  pyrtl.py  strategies.py  verilog.py
pyhdl_eval/test/: bits_test.py  comb_incr_amaranth.py  comb_incr_migen.py  comb_incr_myhdl.py  comb_incr_pymtl.py  comb_incr_pyrtl.py  comb_incr_ref.v  comb_incr_test.py  comb_incr_verilog.v  const_amaranth.py  const_migen.py  const_myhdl.py  const_pymtl.py  const_pyrtl.py  const_ref.v  const_test.py  const_verilog.v  count_incr_amaranth.py  count_incr_migen.py  count_incr_myhdl.py  count_incr_pymtl.py  count_incr_pyrtl.py  count_incr_ref.v  count_incr_test.py  count_incr_verilog.v  param_incr_amaranth.py  param_incr_migen.py  param_incr_myhdl.py  param_incr_pymtl.py  param_incr_pyrtl.py  param_incr_ref.v  param_incr_test.py  param_incr_verilog.v  pipe_incr_amaranth.py  pipe_incr_migen.py  pipe_incr_myhdl.py  pipe_incr_pymtl.py  pipe_incr_pyrtl.py  pipe_incr_ref.v  pipe_incr_test.py  (+9 more)
scripts/: analyze-amaranth  analyze-migen  analyze-myhdl  analyze-pymtl  analyze-pyrtl  analyze-verilog  collect-summaries  echo-progress  examples-1shot-pymtl.txt  examples-1shot-verilog.txt  examples-2shot-pymtl.txt  examples-2shot-verilog.txt  examples-3shot-pymtl.txt  examples-3shot-verilog.txt  examples-4shot-pymtl.txt  examples-4shot-verilog.txt  generate  py-py-analyze  pymtl-example-prefix.txt  sv-generate  sv-iv-analyze  sv-vr-analyze  verilog-example-prefix.txt
